<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_topStories"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_books"
        android:enabled="true"
        android:icon="@drawable/ic_book"
        android:title="@string/Books"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_archive"
        android:enabled="true"
        android:icon="@drawable/ic_round_archive_24"
        android:title="@string/Favorites"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/Profile"
        app:showAsAction="ifRoom" />
</menu>